Markdown chaged, cleaned data

--- a/Salary_Prediction.ipynb
+++ b/Salary_Prediction.ipynb
@@ -1,6 +1,7 @@
 {
  "cells": [
   {
+   "attachments": {},
    "cell_type": "markdown",
    "metadata": {},
    "source": [
@@ -18,19 +19,20 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "### ---- 1 Define the problem ----"
+    "### <font color=Firebrick>---- 1 Define the problem ----</font>"
    ]
   },
   {
+   "attachments": {},
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "This Jupyter Notebook loads, explores, and visualizes the salary prediction datasets. Also, builds and tests several predictive models, and then makes salary predictions on test data using the best model."
+    "<font color=blue>**This Jupyter Notebook loads, explores, and visualizes the salary prediction datasets. Also, builds and tests several predictive models, and then makes salary predictions on test data using the best model.**</font>"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 48,
    "metadata": {
     "collapsed": true
    },
@@ -42,6 +44,8 @@
     "import numpy as np\n",
     "import seaborn as sns\n",
     "import sklearn as sk\n",
+    "from sklearn.utils import shuffle\n",
+    "\n",
     "%matplotlib inline\n",
     "#Persoal info \n",
     "__author__ = \"Bhargavsinh Ravalji\""
@@ -58,17 +62,18 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "### ---- 2 Load the data and Examine the data----"
+    "### <font color=Firebrick>---- 2 Load the data and Examine the data----</font>"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
-   "metadata": {},
+   "execution_count": 49,
+   "metadata": {
+    "collapsed": true
+   },
    "outputs": [],
    "source": [
-    "#load the data into a Pandas dataframe\n",
-    "'''load csv file to pd dataframe'''\n",
+    "#Load csv file to pd dataframe\n",
     "def load_data(file):\n",
     "    return pd.read_csv(file)\n",
     "train_feature_df = load_data('train_features.csv')\n",
@@ -80,12 +85,12 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "#### Examine the data"
+    "#### <font color=green>*Examine the data*</font>"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 50,
    "metadata": {},
    "outputs": [
     {
@@ -260,7 +265,7 @@
        "9       AUTO               17                   68  "
       ]
      },
-     "execution_count": 8,
+     "execution_count": 50,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -271,7 +276,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 51,
    "metadata": {},
    "outputs": [
     {
@@ -368,7 +373,7 @@
        "9  JOB1362684407696     104"
       ]
      },
-     "execution_count": 9,
+     "execution_count": 51,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -379,7 +384,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": 52,
    "metadata": {},
    "outputs": [
     {
@@ -554,7 +559,7 @@
        "9               23                   97  "
       ]
      },
-     "execution_count": 10,
+     "execution_count": 52,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -565,7 +570,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": 53,
    "metadata": {},
    "outputs": [
     {
@@ -594,7 +599,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": 54,
    "metadata": {},
    "outputs": [
     {
@@ -679,7 +684,7 @@
        "max          24.000000            99.000000"
       ]
      },
-     "execution_count": 12,
+     "execution_count": 54,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -692,25 +697,382 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "### ---- 3 Clean the data ----"
+    "#### <font color=green>*Merge two dataframes*</font>"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
-   "metadata": {
-    "collapsed": true
-   },
+   "execution_count": 55,
+   "metadata": {},
    "outputs": [],
    "source": [
-    "#look for duplicate data, invalid data (e.g. salaries <=0), or corrupt data and remove it"
+    "#Consolidate training data: Performing inner join and getting uniq rows from both dataframe\n",
+    "def consolidate_data(df1, df2, key=None, left_index=False, right_index=False):\n",
+    "    return pd.merge(left=df1, right=df2, how='inner', on=key, left_index=left_index, right_index=right_index) "
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 56,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "<div>\n",
+       "<style>\n",
+       "    .dataframe thead tr:only-child th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: left;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>jobId</th>\n",
+       "      <th>companyId</th>\n",
+       "      <th>jobType</th>\n",
+       "      <th>degree</th>\n",
+       "      <th>major</th>\n",
+       "      <th>industry</th>\n",
+       "      <th>yearsExperience</th>\n",
+       "      <th>milesFromMetropolis</th>\n",
+       "      <th>salary</th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>0</th>\n",
+       "      <td>JOB1362684407687</td>\n",
+       "      <td>COMP37</td>\n",
+       "      <td>CFO</td>\n",
+       "      <td>MASTERS</td>\n",
+       "      <td>MATH</td>\n",
+       "      <td>HEALTH</td>\n",
+       "      <td>10</td>\n",
+       "      <td>83</td>\n",
+       "      <td>130</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>1</th>\n",
+       "      <td>JOB1362684407688</td>\n",
+       "      <td>COMP19</td>\n",
+       "      <td>CEO</td>\n",
+       "      <td>HIGH_SCHOOL</td>\n",
+       "      <td>NONE</td>\n",
+       "      <td>WEB</td>\n",
+       "      <td>3</td>\n",
+       "      <td>73</td>\n",
+       "      <td>101</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>2</th>\n",
+       "      <td>JOB1362684407689</td>\n",
+       "      <td>COMP52</td>\n",
+       "      <td>VICE_PRESIDENT</td>\n",
+       "      <td>DOCTORAL</td>\n",
+       "      <td>PHYSICS</td>\n",
+       "      <td>HEALTH</td>\n",
+       "      <td>10</td>\n",
+       "      <td>38</td>\n",
+       "      <td>137</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>3</th>\n",
+       "      <td>JOB1362684407690</td>\n",
+       "      <td>COMP38</td>\n",
+       "      <td>MANAGER</td>\n",
+       "      <td>DOCTORAL</td>\n",
+       "      <td>CHEMISTRY</td>\n",
+       "      <td>AUTO</td>\n",
+       "      <td>8</td>\n",
+       "      <td>17</td>\n",
+       "      <td>142</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>4</th>\n",
+       "      <td>JOB1362684407691</td>\n",
+       "      <td>COMP7</td>\n",
+       "      <td>VICE_PRESIDENT</td>\n",
+       "      <td>BACHELORS</td>\n",
+       "      <td>PHYSICS</td>\n",
+       "      <td>FINANCE</td>\n",
+       "      <td>8</td>\n",
+       "      <td>16</td>\n",
+       "      <td>163</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "              jobId companyId         jobType       degree      major  \\\n",
+       "0  JOB1362684407687    COMP37             CFO      MASTERS       MATH   \n",
+       "1  JOB1362684407688    COMP19             CEO  HIGH_SCHOOL       NONE   \n",
+       "2  JOB1362684407689    COMP52  VICE_PRESIDENT     DOCTORAL    PHYSICS   \n",
+       "3  JOB1362684407690    COMP38         MANAGER     DOCTORAL  CHEMISTRY   \n",
+       "4  JOB1362684407691     COMP7  VICE_PRESIDENT    BACHELORS    PHYSICS   \n",
+       "\n",
+       "  industry  yearsExperience  milesFromMetropolis  salary  \n",
+       "0   HEALTH               10                   83     130  \n",
+       "1      WEB                3                   73     101  \n",
+       "2   HEALTH               10                   38     137  \n",
+       "3     AUTO                8                   17     142  \n",
+       "4  FINANCE                8                   16     163  "
+      ]
+     },
+     "execution_count": 56,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "raw_train_df = consolidate_data(train_feature_df, train_target_df, key='jobId') \n",
+    "raw_train_df.head(5)"
    ]
   },
   {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "### ---- 4 Explore the data (EDA) ----"
+    "### <font color=Firebrick>---- 3 Clean the data ----</font>"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "#### <font color=green>*Check for Duplicates*</font>"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 57,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "0"
+      ]
+     },
+     "execution_count": 57,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "train_feature_df.duplicated().sum()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 58,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "0"
+      ]
+     },
+     "execution_count": 58,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "train_target_df.duplicated().sum()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 61,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "0"
+      ]
+     },
+     "execution_count": 61,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "test_feature_df.duplicated().sum()"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "#### <font color=green>*Check invalid or corrupt data and remove it*</font>"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 62,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "'''remove rows that contain salary <= 0 or duplicate job IDs'''\n",
+    "def clean_data(raw_df):\n",
+    "    clean_df = raw_df.drop_duplicates(subset='jobId')\n",
+    "    clean_df = clean_df[clean_df.salary > 0]\n",
+    "    return clean_df"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 63,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "<div>\n",
+       "<style>\n",
+       "    .dataframe thead tr:only-child th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: left;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>index</th>\n",
+       "      <th>jobId</th>\n",
+       "      <th>companyId</th>\n",
+       "      <th>jobType</th>\n",
+       "      <th>degree</th>\n",
+       "      <th>major</th>\n",
+       "      <th>industry</th>\n",
+       "      <th>yearsExperience</th>\n",
+       "      <th>milesFromMetropolis</th>\n",
+       "      <th>salary</th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>0</th>\n",
+       "      <td>75978</td>\n",
+       "      <td>JOB1362684483665</td>\n",
+       "      <td>COMP48</td>\n",
+       "      <td>VICE_PRESIDENT</td>\n",
+       "      <td>HIGH_SCHOOL</td>\n",
+       "      <td>NONE</td>\n",
+       "      <td>OIL</td>\n",
+       "      <td>7</td>\n",
+       "      <td>48</td>\n",
+       "      <td>112</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>1</th>\n",
+       "      <td>899895</td>\n",
+       "      <td>JOB1362685307582</td>\n",
+       "      <td>COMP0</td>\n",
+       "      <td>CFO</td>\n",
+       "      <td>DOCTORAL</td>\n",
+       "      <td>BIOLOGY</td>\n",
+       "      <td>OIL</td>\n",
+       "      <td>6</td>\n",
+       "      <td>35</td>\n",
+       "      <td>123</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>2</th>\n",
+       "      <td>561622</td>\n",
+       "      <td>JOB1362684969309</td>\n",
+       "      <td>COMP32</td>\n",
+       "      <td>CEO</td>\n",
+       "      <td>DOCTORAL</td>\n",
+       "      <td>PHYSICS</td>\n",
+       "      <td>HEALTH</td>\n",
+       "      <td>10</td>\n",
+       "      <td>53</td>\n",
+       "      <td>181</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>3</th>\n",
+       "      <td>90891</td>\n",
+       "      <td>JOB1362684498578</td>\n",
+       "      <td>COMP2</td>\n",
+       "      <td>JUNIOR</td>\n",
+       "      <td>DOCTORAL</td>\n",
+       "      <td>ENGINEERING</td>\n",
+       "      <td>FINANCE</td>\n",
+       "      <td>20</td>\n",
+       "      <td>57</td>\n",
+       "      <td>178</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>4</th>\n",
+       "      <td>787257</td>\n",
+       "      <td>JOB1362685194944</td>\n",
+       "      <td>COMP62</td>\n",
+       "      <td>MANAGER</td>\n",
+       "      <td>NONE</td>\n",
+       "      <td>NONE</td>\n",
+       "      <td>EDUCATION</td>\n",
+       "      <td>13</td>\n",
+       "      <td>76</td>\n",
+       "      <td>63</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "    index             jobId companyId         jobType       degree  \\\n",
+       "0   75978  JOB1362684483665    COMP48  VICE_PRESIDENT  HIGH_SCHOOL   \n",
+       "1  899895  JOB1362685307582     COMP0             CFO     DOCTORAL   \n",
+       "2  561622  JOB1362684969309    COMP32             CEO     DOCTORAL   \n",
+       "3   90891  JOB1362684498578     COMP2          JUNIOR     DOCTORAL   \n",
+       "4  787257  JOB1362685194944    COMP62         MANAGER         NONE   \n",
+       "\n",
+       "         major   industry  yearsExperience  milesFromMetropolis  salary  \n",
+       "0         NONE        OIL                7                   48     112  \n",
+       "1      BIOLOGY        OIL                6                   35     123  \n",
+       "2      PHYSICS     HEALTH               10                   53     181  \n",
+       "3  ENGINEERING    FINANCE               20                   57     178  \n",
+       "4         NONE  EDUCATION               13                   76      63  "
+      ]
+     },
+     "execution_count": 63,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "'''Shuffle, and reindex training data -- shuffling improves cross-validation accuracy'''\n",
+    "clean_train_df = shuffle(clean_data(raw_train_df)).reset_index()\n",
+    "clean_train_df.head(5)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### <font color=Firebrick>---- 4 Explore the data (EDA) ----</font>"
    ]
   },
   {
@@ -731,7 +1093,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "### ---- 5 Establish a baseline ----"
+    "### <font color=Firebrick>---- 5 Establish a baseline ----</font>"
    ]
   },
   {
@@ -752,7 +1114,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "### ---- 6 Hypothesize solution ----"
+    "### <font color=Firebrick>---- 6 Hypothesize solution ----</font>"
    ]
   },
   {
@@ -798,12 +1160,12 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "### ---- 7 Engineer features  ----"
+    "### <font color=Firebrick>---- 7 Engineer features  ----</font>"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 37,
    "metadata": {
     "collapsed": true
    },
@@ -817,12 +1179,12 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "### ---- 8 Create models ----"
+    "### <font color=Firebrick>---- 8 Create models ----</font>"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 15,
+   "execution_count": 38,
    "metadata": {
     "collapsed": true
    },
@@ -835,12 +1197,12 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "### ---- 9 Test models ----"
+    "### <font color=Firebrick>---- 9 Test models ----</font>"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 39,
    "metadata": {
     "collapsed": true
    },
@@ -853,12 +1215,12 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "### ---- 10 Select best model  ----"
+    "### <font color=Firebrick>---- 10 Select best model  ----</font>"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 40,
    "metadata": {
     "collapsed": true
    },
@@ -878,7 +1240,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "### ---- 11 Automate pipeline ----"
+    "### <font color=Firebrick>---- 11 Automate pipeline ----</font>"
    ]
   },
   {
@@ -897,7 +1259,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "### ---- 12 Deploy solution ----"
+    "### <font color=Firebrick>---- 12 Deploy solution ----</font>"
    ]
   },
   {
@@ -917,7 +1279,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "### ---- 13 Measure efficacy ----"
+    "### <font color=Firebrick>---- 13 Measure efficacy ----</font>"
    ]
   },
   {
