Explore the data and find correlatio of variables

--- a/Salary_Prediction.ipynb
+++ b/Salary_Prediction.ipynb
@@ -917,12 +917,41 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "#### <font color=green>*Check invalid or corrupt data and remove it*</font>"
+    "#### <font color=green>*Check for NONE values*</font>"
    ]
   },
   {
    "cell_type": "code",
    "execution_count": 13,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "532355"
+      ]
+     },
+     "execution_count": 13,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "train_feature_df.query('major == \"NONE\"').major.count()\n",
+    "#--------------OR----------------------\n",
+    "#train_feature_df.loc[train_feature_df.major == 'NONE', 'major'].value_counts()"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "#### <font color=green>*Check invalid or corrupt data and remove it*</font>"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 14,
    "metadata": {
     "collapsed": true
    },
@@ -937,7 +966,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 14,
+   "execution_count": 15,
    "metadata": {},
    "outputs": [
     {
@@ -976,90 +1005,90 @@
        "  <tbody>\n",
        "    <tr>\n",
        "      <th>0</th>\n",
-       "      <td>755356</td>\n",
-       "      <td>JOB1362685163043</td>\n",
-       "      <td>COMP50</td>\n",
-       "      <td>CTO</td>\n",
+       "      <td>344760</td>\n",
+       "      <td>JOB1362684752447</td>\n",
+       "      <td>COMP58</td>\n",
+       "      <td>MANAGER</td>\n",
+       "      <td>MASTERS</td>\n",
        "      <td>NONE</td>\n",
-       "      <td>NONE</td>\n",
-       "      <td>OIL</td>\n",
-       "      <td>2</td>\n",
-       "      <td>22</td>\n",
-       "      <td>131</td>\n",
+       "      <td>SERVICE</td>\n",
+       "      <td>13</td>\n",
+       "      <td>47</td>\n",
+       "      <td>90</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>1</th>\n",
-       "      <td>102892</td>\n",
-       "      <td>JOB1362684510579</td>\n",
+       "      <td>231983</td>\n",
+       "      <td>JOB1362684639670</td>\n",
        "      <td>COMP53</td>\n",
        "      <td>JUNIOR</td>\n",
-       "      <td>DOCTORAL</td>\n",
-       "      <td>MATH</td>\n",
-       "      <td>SERVICE</td>\n",
-       "      <td>21</td>\n",
-       "      <td>89</td>\n",
-       "      <td>100</td>\n",
+       "      <td>HIGH_SCHOOL</td>\n",
+       "      <td>NONE</td>\n",
+       "      <td>HEALTH</td>\n",
+       "      <td>11</td>\n",
+       "      <td>23</td>\n",
+       "      <td>103</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>2</th>\n",
-       "      <td>396854</td>\n",
-       "      <td>JOB1362684804541</td>\n",
-       "      <td>COMP10</td>\n",
-       "      <td>CTO</td>\n",
+       "      <td>814845</td>\n",
+       "      <td>JOB1362685222532</td>\n",
+       "      <td>COMP61</td>\n",
+       "      <td>VICE_PRESIDENT</td>\n",
        "      <td>HIGH_SCHOOL</td>\n",
        "      <td>NONE</td>\n",
-       "      <td>EDUCATION</td>\n",
-       "      <td>9</td>\n",
-       "      <td>57</td>\n",
-       "      <td>116</td>\n",
+       "      <td>SERVICE</td>\n",
+       "      <td>16</td>\n",
+       "      <td>19</td>\n",
+       "      <td>133</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>3</th>\n",
-       "      <td>254512</td>\n",
-       "      <td>JOB1362684662199</td>\n",
-       "      <td>COMP62</td>\n",
+       "      <td>595065</td>\n",
+       "      <td>JOB1362685002752</td>\n",
+       "      <td>COMP5</td>\n",
        "      <td>CFO</td>\n",
        "      <td>MASTERS</td>\n",
-       "      <td>PHYSICS</td>\n",
-       "      <td>FINANCE</td>\n",
-       "      <td>0</td>\n",
-       "      <td>86</td>\n",
-       "      <td>153</td>\n",
+       "      <td>BUSINESS</td>\n",
+       "      <td>SERVICE</td>\n",
+       "      <td>20</td>\n",
+       "      <td>47</td>\n",
+       "      <td>155</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>4</th>\n",
-       "      <td>317742</td>\n",
-       "      <td>JOB1362684725429</td>\n",
-       "      <td>COMP39</td>\n",
-       "      <td>MANAGER</td>\n",
+       "      <td>911563</td>\n",
+       "      <td>JOB1362685319250</td>\n",
+       "      <td>COMP14</td>\n",
+       "      <td>VICE_PRESIDENT</td>\n",
        "      <td>NONE</td>\n",
        "      <td>NONE</td>\n",
-       "      <td>EDUCATION</td>\n",
-       "      <td>23</td>\n",
-       "      <td>22</td>\n",
-       "      <td>95</td>\n",
+       "      <td>SERVICE</td>\n",
+       "      <td>10</td>\n",
+       "      <td>70</td>\n",
+       "      <td>85</td>\n",
        "    </tr>\n",
        "  </tbody>\n",
        "</table>\n",
        "</div>"
       ],
       "text/plain": [
-       "    index             jobId companyId  jobType       degree    major  \\\n",
-       "0  755356  JOB1362685163043    COMP50      CTO         NONE     NONE   \n",
-       "1  102892  JOB1362684510579    COMP53   JUNIOR     DOCTORAL     MATH   \n",
-       "2  396854  JOB1362684804541    COMP10      CTO  HIGH_SCHOOL     NONE   \n",
-       "3  254512  JOB1362684662199    COMP62      CFO      MASTERS  PHYSICS   \n",
-       "4  317742  JOB1362684725429    COMP39  MANAGER         NONE     NONE   \n",
+       "    index             jobId companyId         jobType       degree     major  \\\n",
+       "0  344760  JOB1362684752447    COMP58         MANAGER      MASTERS      NONE   \n",
+       "1  231983  JOB1362684639670    COMP53          JUNIOR  HIGH_SCHOOL      NONE   \n",
+       "2  814845  JOB1362685222532    COMP61  VICE_PRESIDENT  HIGH_SCHOOL      NONE   \n",
+       "3  595065  JOB1362685002752     COMP5             CFO      MASTERS  BUSINESS   \n",
+       "4  911563  JOB1362685319250    COMP14  VICE_PRESIDENT         NONE      NONE   \n",
        "\n",
-       "    industry  yearsExperience  milesFromMetropolis  salary  \n",
-       "0        OIL                2                   22     131  \n",
-       "1    SERVICE               21                   89     100  \n",
-       "2  EDUCATION                9                   57     116  \n",
-       "3    FINANCE                0                   86     153  \n",
-       "4  EDUCATION               23                   22      95  "
+       "  industry  yearsExperience  milesFromMetropolis  salary  \n",
+       "0  SERVICE               13                   47      90  \n",
+       "1   HEALTH               11                   23     103  \n",
+       "2  SERVICE               16                   19     133  \n",
+       "3  SERVICE               20                   47     155  \n",
+       "4  SERVICE               10                   70      85  "
       ]
      },
-     "execution_count": 14,
+     "execution_count": 15,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1079,7 +1108,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 15,
+   "execution_count": 16,
    "metadata": {
     "collapsed": true
    },
@@ -1100,7 +1129,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 16,
+   "execution_count": 17,
    "metadata": {},
    "outputs": [
     {
@@ -1185,7 +1214,7 @@
        "max          24.000000            99.000000"
       ]
      },
-     "execution_count": 16,
+     "execution_count": 17,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1203,7 +1232,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 17,
+   "execution_count": 18,
    "metadata": {},
    "outputs": [
     {
@@ -1256,7 +1285,7 @@
        "    </tr>\n",
        "    <tr>\n",
        "      <th>top</th>\n",
-       "      <td>JOB1362684960695</td>\n",
+       "      <td>JOB1362685048889</td>\n",
        "      <td>COMP39</td>\n",
        "      <td>SENIOR</td>\n",
        "      <td>HIGH_SCHOOL</td>\n",
@@ -1280,11 +1309,11 @@
        "                   jobId companyId  jobType       degree    major industry\n",
        "count            1000000   1000000  1000000      1000000  1000000  1000000\n",
        "unique           1000000        63        8            5        9        7\n",
-       "top     JOB1362684960695    COMP39   SENIOR  HIGH_SCHOOL     NONE      WEB\n",
+       "top     JOB1362685048889    COMP39   SENIOR  HIGH_SCHOOL     NONE      WEB\n",
        "freq                   1     16193   125886       236976   532355   143206"
       ]
      },
-     "execution_count": 17,
+     "execution_count": 18,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1302,7 +1331,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 18,
+   "execution_count": 19,
    "metadata": {},
    "outputs": [
     {
@@ -1378,7 +1407,7 @@
        "max        301.000000"
       ]
      },
-     "execution_count": 18,
+     "execution_count": 19,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1396,7 +1425,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 19,
+   "execution_count": 20,
    "metadata": {},
    "outputs": [
     {
@@ -1512,16 +1541,16 @@
        "4  FINANCE                8                   16     163  "
       ]
      },
-     "execution_count": 19,
+     "execution_count": 20,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
-    "def merge_cat_num_data(df1,df2,on=None):# cat_vars=None, num_vars=None):\n",
-    "    train_df = pd.merge(df1, df2, on=None)\n",
+    "def merge_cat_num_data(df1,df2):# cat_vars=None, num_vars=None):\n",
+    "    train_df = pd.merge(df1, df2)\n",
     "    return train_df \n",
-    "merged_data = merge_cat_num_data(train_feature_df,train_target_df,on='jobId')\n",
+    "merged_data = merge_cat_num_data(train_feature_df,train_target_df)\n",
     "merged_data.head(5)"
    ]
   },
@@ -1529,88 +1558,37 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "#### <font color=green>*Find Correction between feature variables*</font>"
+    "#### <font color=green>*Find Correction of variables*</font>"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 20,
+   "execution_count": 21,
    "metadata": {},
    "outputs": [
     {
      "data": {
-      "text/html": [
-       "<div>\n",
-       "<style>\n",
-       "    .dataframe thead tr:only-child th {\n",
-       "        text-align: right;\n",
-       "    }\n",
-       "\n",
-       "    .dataframe thead th {\n",
-       "        text-align: left;\n",
-       "    }\n",
-       "\n",
-       "    .dataframe tbody tr th {\n",
-       "        vertical-align: top;\n",
-       "    }\n",
-       "</style>\n",
-       "<table border=\"1\" class=\"dataframe\">\n",
-       "  <thead>\n",
-       "    <tr style=\"text-align: right;\">\n",
-       "      <th></th>\n",
-       "      <th>yearsExperience</th>\n",
-       "      <th>milesFromMetropolis</th>\n",
-       "      <th>salary</th>\n",
-       "    </tr>\n",
-       "  </thead>\n",
-       "  <tbody>\n",
-       "    <tr>\n",
-       "      <th>yearsExperience</th>\n",
-       "      <td>1.000000</td>\n",
-       "      <td>0.000673</td>\n",
-       "      <td>0.375013</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>milesFromMetropolis</th>\n",
-       "      <td>0.000673</td>\n",
-       "      <td>1.000000</td>\n",
-       "      <td>-0.297666</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>salary</th>\n",
-       "      <td>0.375013</td>\n",
-       "      <td>-0.297666</td>\n",
-       "      <td>1.000000</td>\n",
-       "    </tr>\n",
-       "  </tbody>\n",
-       "</table>\n",
-       "</div>"
-      ],
       "text/plain": [
-       "                     yearsExperience  milesFromMetropolis    salary\n",
-       "yearsExperience             1.000000             0.000673  0.375013\n",
-       "milesFromMetropolis         0.000673             1.000000 -0.297666\n",
-       "salary                      0.375013            -0.297666  1.000000"
+       "salary                 1.000000\n",
+       "yearsExperience        0.375013\n",
+       "milesFromMetropolis   -0.297666\n",
+       "Name: salary, dtype: float64"
       ]
      },
-     "execution_count": 20,
+     "execution_count": 21,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
-    "#def get_correlation(df, var1, var2):\n",
-    " #   return df[var1].corr(df[var2])\n",
+    "def get_correlation(df):\n",
+    "    return df.corr()\n",
     "\n",
-    "#get_correlation(merged_data,'jobId','salary')\n",
-    "merged_data.corr()"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
-    "#### <font color=green>*Find Correction between feature and target variables*</font>"
+    "#get_correlation(merged_data)\n",
+    "#-------OR-----------\n",
+    "#merged_data.corr()\n",
+    "corr_matrix = get_correlation(merged_data)\n",
+    "corr_matrix[\"salary\"].sort_values(ascending=False)\n"
    ]
   },
   {
@@ -1634,7 +1612,8 @@
     "    num_df = df[num_vars].apply(pd.to_numeric)\n",
     "    return pd.concat([cat_df, num_df], axis=1)#,ignore_index=False)\n",
     "feature_df = concat_cat_num_data(clean_train_df, cat_vars=categorical_vars, num_vars=numeric_vars)\n",
-    "test_df = concat_cat_num_data(test_feature_df, cat_vars=categorical_vars, num_vars=numeric_vars)"
+    "test_df = concat_cat_num_data(test_feature_df, cat_vars=categorical_vars, num_vars=numeric_vars)\n",
+    "feature_df.head(5)"
    ]
   },
   {
